style.css
*, *:before, *:after {
  box-sizing: border-box;
}

input, textarea {
  -webkit-appearance: none;
  border-radius: 0;
}

input[type=submit] {
    -webkit-border-radius:0px;
    -webkit-appearance: none;
    border-radius: 0;
}

html {
  background-color: black;
}

body {
  background: url('bg2.png') no-repeat center;
}

html, body {
  color: white;
  background-size: cover;
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
}

@font-face {
  font-family: 'Circular Book';
  src: url('CircularStd-Book.ttf') format('truetype');
}

@font-face {
  font-family: 'Circular Medium';
  src: url('CircularStd-Medium.ttf') format('truetype');
}

@font-face {
  font-family: 'League Gothic';
  src: url('leaguegothic-regular.ttf') format('truetype');
}

h1 {
  font-family: 'League Gothic';
  font-size: 56px;
  letter-spacing: 4px;
  margin: 16px 0;
}

h2 {
  font-family: 'Circular Book';
  font-size: 13px;
  letter-spacing: 1px;
  color: rgba(255,255,255,0.6);
}

a {
  text-decoration: none;
  color: inherit;
}

p {
  font-family: 'Circular Medium';
  text-align: center;
}

hr {
  width: 30px;
  margin-bottom: 50px;
}

.navbar {
  width: 100%;
  margin: 16px 0;
}

.logo {
  width: 165px;
  display: block;
  margin: 0 auto;
}

.main-info {
  text-transform: uppercase;
  width: 100%;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.bottom-info {
  display: flex;
  justify-content: space-between;
  width: 100%;
  margin-top: 64px;
  opacity: 0.6;
  text-align: center;
  padding: 0 32px;
}

.email-box {
  background-color: #ffffff2e;
  color: white;
  width: 320px;
  height: 44px;
  padding: 0;
  padding-left: 12px;
  border: 0;
}

.sign-up {
  -webkit-border-radius:0px;
  -webkit-appearance: none;
  border-radius: 0;
  height: 44px;
  background: white;
  font-size: 15px;
  text-transform: uppercase;
  font-weight: 500;
  border: none;
  padding: 0 20px;
}

.mailing-list-box {
  display: flex;
  justify-content: center;
}

.thankyou-info {
  text-transform: none;
  font-size: 15px;
}

.signup-card {
  padding: 32px 32px 128px 32px;
}

@media only screen and (max-width:620px) {
  .signup-card {
    width: 100%;
  }

  .mailing-list-box {
    flex-direction: column;
  }

  .email-box {
    width: 100%;
  }

  .sign-up {
    width: 100%;
    margin-top: 10px;
  }

  .bottom-info {
    flex-direction: column;
    padding: 0;
  }

  .divider {
    display: none;
  }
}

